--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My app</title>
+    <title>Login Page</title>
 </head>
 <body>
-    <h1>This is my app::</h1>
-    <p>Login form added on login branch</p>
+    <h1>This is login page</h1>
+    <p>Please enter the username and password.</p>
 </body>
 </html>
