login file updated

--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
     <title>Login form</title>
 </head>
 <body>
+    <h1>Register Form:</h1>
+    <p>If you are new then, register first.</p>
     <h1>Login Form:</h1>
     <p>Enter your username and password.</p>
 </body>
