--- a/login.html
+++ b/login.html
@@ -10,5 +10,6 @@
     <p>If you are new then, register first.</p>
     <h1>Login Form:</h1>
     <p>Enter your username and password.</p>
+    <p>Thank you</p>
 </body>
 </html>
